6.08.2001	channel editor <garetxe@users.sf.net>

	* src/channel_editor.c: Keep selected channels selected when
	hitting up/down.
	* glade/zapping.glade: s/frequence/frequency/ for consistence.

5.08.2001	v4lx.c <mschimek@users.sf.net>

	* Rewrote guess_bttv.
	* Added lots of error messages.
	* Added lots of --debug output.
	* Enabled the v4l 2.4.x vbi interface.

1.08.2001	fixes <garetxe@users.sf.net>

	* libvbi/exp-png.c: Fixed setjmp warning.
	* src/x11stuff.c: Removed XSynchronize call, was broken according
	to 'man XSynchronize'.

01.08.2001	libvbi fix <mschimek@users.sf.net>

	* search.c: Corrected hardcoded column width 40.

31.07.2001	libvbi <mschimek@users.sf.net>

	* v4lx.c: Fixed blank vbi bug.
	* libvbi: Rewrote open sequence.

29.07.2001	parrot fixes <mschimek@users.sf.net>

	* x11stuff.c: Check success of shmget et al.
	* parrot: Forgot to install parrot.glide.

28.07.2001	gui fixes <garetxe@users.sf.net>

	* ttxview: Added a sep between up/down and the rest.
	* main.c: Worked around a bug in glade (automagically changes
	GNOME_STOCK_PIXMAP_(UP|DOWN) into _(TOP|BOTTOM)).
	* v4linterface.c, properties.c: Added configurable title bar.
	* src/zapzilla: Because of popular demand, added standalone Zapzilla.
	* src/ttxview.c: Added view creation/destruction notification.

28.07.2001	<mschimek@users.sf.net>

	* Fifo conversion complete.

25.07.2001	rearranged gui <garetxe@users.sf.net>

	* src/v4linterface.c, glade/zapping.glade: Left just channel
	up/down in the toolbar, moved Channels, standards and inputs to
	the menu. Set channel name in the main window title bar.

24.07.2001	french translation <garetxe@users.sf.net>

	* src/channel_editor.c: Doesn't add the channel if Cancel is
	clicked on the new channel prompt.
	* plugins/parrot: Made num_bundles configurable, size estimation
	in the properties.
	* Applied patches from Roger Fujii (Solaris
	port). s/TRANSPARENT/TRANSPARENT_FULL/g.
	* Updated french translation (Christian Marillat)
