@@ -9,6 +9,7 @@ gchar *s = N_("Manages the installed plug-ins");
 gchar *s = N_("P_lugins");
 gchar *s = N_("Edit here the channels you have tuned");
 gchar *s = N_("_TV Channels");
+gchar *s = N_("Toggle muted");
 gchar *s = N_("Use this to go fullscreen. Press ESC to return to Windowed mode");
 gchar *s = N_("Go _Fullscreen");
 gchar *s = N_("Use this to start the windowed overlay mode");
@@ -171,7 +172,7 @@ gchar *s = N_("Select here the Standard this channel uses");
 gchar *s = N_("Magical Standard");
 gchar *s = N_("Select your country and click here to search for the available channels");
 gchar *s = N_("_Search for the available channels in the current country");
-gchar *s = N_("Frequence:");
+gchar *s = N_("Frequency:");
 gchar *s = N_("Enter here the alias you want to give to this channel:");
 gchar *s = N_("Enter here the name you want to give to this channel");
 gchar *s = N_("Ctrl");
